# FP-LC-Report

./: .gitignore  Basics.lhs  Conclusion.tex  Howto.tex  Intro_to_LC.tex  Main.lhs  Profiling.tex  latexmacros.tex  package.yaml  report-example.cabal  report.cabal  report.tex
exec/: Main.lhs
lib/: Basics.lhs
test/: simpletests.lhs
