name:          report
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.8

library
  ghc-options:      -Wall
  exposed-modules:  Basics
  hs-source-dirs:   lib
  build-depends:    base >= 4.7 && < 5,
                    random

executable myprogram
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.lhs
  build-depends:    base >= 4.7 && < 5,
                    report

test-suite simpletests
  ghc-options:      -Wall -fhpc -fforce-recomp
  hs-source-dirs:   test
  main-is:          simpletests.lhs
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.7 && < 5,
                    QuickCheck,
                    report
